--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body, html {
-  font: 1.5em/1.5 arial, Helvetica,sans-serif;
+  font-size: 1.5em;
+  font-family: 'Merriweather Sans', sans-serif;
   padding:0;
   margin:0;
 }
@@ -100,8 +101,7 @@ header{
   background:#028482;
   background: linear-gradient(#028482,#7ABA7A);
   color:#ffffff;
-  padding-top:10px;
-  min-height:50px;
+  padding-top: 5px;
   border-bottom: #B76EB8 4px solid;
 }
 
@@ -109,13 +109,13 @@ header a{
   color:#ffffff;
   text-decoration:none;
   text-transform: uppercase;
-  font-size:1em;
+  font-size: .35em;
 }
 
 header li{
   float:left;
   display:inline;
-  padding: 0 20px 0 20px;
+  padding: 0 5px 0 5px;
 }
 
 header #branding{
@@ -135,7 +135,7 @@ header .highlight {
   color:#e8491d;
   font-weight:bold;
   font-family: Monoton;
-  font-size: 2em;
+  font-size: 1em;
 }
 
 header .current a{
@@ -148,55 +148,59 @@ header a:hover{
   font-weight:bold;
 }
 
-/* Showcase */
-#showcase{
-  min-height:300px;
-  background:url('../img/showcase.jpg') no-repeat 0 -400px;
-  text-align:center;
-  color:#ffffff;
+/* case */
+#case {
+  min-height: 300px;
+  background: url('img/showcase.jpg') no-repeat 0 -400px;
+  text-align: center;
+  color: #ffffff;
 }
 
-#showcase h1{
-  margin-top:100px;
-  font-size:2.5em;
-  margin-bottom:10px;
+#case h1{
+  margin-top: 100px;
+  font-size: .90em;
+  margin-bottom: 10px;
+} 
+
+#case p{
+  font-size: .50em;
+  color: black;
+  padding-bottom: 10px;
 }
 
-#showcase p{
-  font-size:1em;
+/* promotion */
+#promotion{
+  padding: 15px;
+  color: white;
+  background: #CCCCCC;
 }
 
-/* Newsletter */
-#newsletter{
-  padding:15px;
-  color:white;
-  background:#CCCCCC;
-}
-
-#newsletter h1{
+#promotion h1{
   float:left;
+  font-size: 1em;
 }
 
-#newsletter form {
+#promotion form {
   float:right;
-  margin-top:15px;
+  margin-top: 5px;
 }
 
-#newsletter input[type="email"]{
-  padding:4px;
-  height:25px;
-  width:250px;
+#promotion input[type="email"]{
+  padding: 10px;
+  height: 15px;
+  width: 200px;
 }
 
 /* Boxes */
 #boxes{
-  margin-top:20px;
+  margin-top:10px;
 }
 
-#boxes .box{
+div .box{
   float:left;
   text-align: center;
-  width:30%;
+  width: 10%;
+  height: 3%;
   padding:10px;
 }
 
@@ -232,16 +236,16 @@ ul#services li{
 }
 
 footer{
-  padding:10px;
-  margin-top:100px;
-  color:black;
-  background-color:#B76EB8;
-  background: linear-gradient(#B76EB8,#ffffff);
-  text-align: center;
-  min-width: 100%;
-  position: fixed;
-  bottom: 0;
-
+    padding:5px;
+    margin-top: 5%;
+    color:black;
+    background-color:#B76EB8;
+    background: linear-gradient(#B76EB8,#ffffff);
+    text-align: center;
+    min-width: 100%;
+    position: fixed;
+    bottom: 0;
+    font-size: .50em;
 }
 
 /* Media Queries */
@@ -249,8 +253,8 @@ footer{
   header #branding,
   header nav,
   header nav li,
-  #newsletter h1,
-  #newsletter form,
+  #promotion h1,
+  #promotion form,
   #boxes .box,
   article#main-col,
   aside#sidebar{
@@ -263,16 +267,16 @@ footer{
     padding-bottom:10px;
   }
 
-  #showcase h1{
+  #case h1{
     margin-top:40px;
   }
 
-  #newsletter button, .quote button{
+  #promotion button, .quote button{
     display:block;
     width:100%;
   }
 
-  #newsletter form input[type="email"], .quote input, .quote textarea{
+  #promotion form input[type="email"], .quote input, .quote textarea{
     width:100%;
     margin-bottom:5px;
   }
@@ -306,6 +310,7 @@ background:url(http://farm8.staticflickr.com/7064/6858179818_5d652f531c_h.jpg) n
   border-radius: 10px;
   padding: 50px;
   background:url('../img/Aurora.jpeg')
+
   -webkit-transform: translate(-50%,-50%);
 -moz-transform: translate(-50%,-50%);
 -o-transform: translate(-50%,-50%);
@@ -324,7 +329,7 @@ transform: translate(-50%,-50%);
 -o-transform: translate(0%,0%);
 -ms-transform: translate(0%,0%);
 transform: translate(0%,0%);
-  }
+}
   
 
   form {
@@ -375,7 +380,7 @@ transform: translate(0%,0%);
     margin-right: .5em;
     box-shadow: inset 0px 1px 0px(white, 80%); 
     &:hover {
-      background: lightblue, 5%);
+    background: lightblue, 5%);
     }
     &:active {
       background: @blue; 
@@ -407,7 +412,7 @@ transform: translate(0%,0%);
 }
 
 
-/*sign-up*/
+sign-up
 
 .log-form2 {
   width: 90%;
@@ -426,3 +431,4 @@ transform: translate(0%,0%);
 -o-transform: translate(-50%,-50%);
 -ms-transform: translate(-50%,-50%);
 transform: translate(-50%,-50%);
+}
